change base class for Combobox2 component to avoid css overlap

--- a/src/components/Combobox2/sass/Combobox.scss
+++ b/src/components/Combobox2/sass/Combobox.scss
@@ -3,7 +3,7 @@
 @import './variables';
 @import '../../FloatingContainer/sass/FloatingContainer';
 
-.tyk-combobox {
+.tyk-combobox2 {
   $container-trigger-width: 40px;
 
   &.disabled {
